--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="theme-color" content="#000000" />
     <meta content="🌐 solport.io/mint" property="og:title">
     <meta content="
-       🟢Trippy Stoned Frogz Mint is NOW LIVE!
-       ◎ Price: 1.5 SOL
-    " property="og:description">
+    📣  Trippy Stoned Frogz Mint is now LIVE!
+
+    ◎   Mint Price: 1.5 SOL" property="og:description">
     <meta content="https://pbs.twimg.com/profile_banners/1517533782148009984/1651582023/1500x500" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
-    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/147" />
+    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/150" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Trippy Stoned Frogz</title>
     <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1518169348594098176/V-0B2jzP_400x400.jpg" />
