--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="description" content="NTC" data-react-helmet="true" />
     <meta name="theme-color" content="#000000" />
-    <meta content="🌐 weirdpalsnft.com/mint" property="og:title">
+    <meta content="🌐 deadapedudes.io/mint" property="og:title">
     <meta content="
-    📣  WeirdPals Mint is now LIVE!
+    📣  Dead Ape Dudes Mint is now LIVE!
 
     ◎   Mint Price: 0 SOL" property="og:description">
     <meta content="https://pbs.twimg.com/profile_banners/1319749307654963201/1654450413/1500x500" property="og:image">
