--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     📣  Tokyo Glitch Mint is now LIVE!
 
     ◎   Mint Price: 3 SOL" property="og:description">
-    <meta content="hhttps://pbs.twimg.com/profile_banners/1512184759455260679/1651587200/1500x500" property="og:image">
+    <meta content="https://pbs.twimg.com/profile_banners/1512184759455260679/1651587200/1500x500" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
     <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/157" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
