--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta charset="utf-8">
     <meta name="description" content="NTC" data-react-helmet="true" />
     <meta name="theme-color" content="#000000" />
-    <meta content="🌐 skybuddiesnft.com/mint" property="og:title">
+    <meta content="🌐 chilldogsclub.com/mint" property="og:title">
     <meta content="
-    📣  Sky Buddies Mint is NOW LIVE!
+    📣  Chill Dogs Club Mint is NOW LIVE!
 
-    ◎   Mint Price: 0.069 SOL" property="og:description">
-    <meta content="https://pbs.twimg.com/profile_banners/1524666306234298370/1652433104/1500x500" property="og:image">
+    ◎   Mint Price: 1 SOL" property="og:description">
+    <meta content="https://pbs.twimg.com/profile_banners/1516925362176987142/1654931062/1500x500" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
-    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/182" />
+    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/186" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Sky Buddies</title>
-    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1525441900949319680/dGFHxS8x_400x400.jpg" />
+    <title>Chill Dogs Club</title>
+    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1534195923760340993/h14e2Fzy_400x400.jpg" />
 
     <link rel="stylesheet" type="text/css" href="css/style.css?1221ss2a2">
 
@@ -26,7 +26,7 @@
     <link rel="stylesheet" type="text/css" href="css/alert.css">
     <link rel="stylesheet" type="text/css" href="css/popper.css">
 
-    <link id="favicon" rel="icon" href="https://pbs.twimg.com/profile_images/1525441900949319680/dGFHxS8x_400x400.jpg">
+    <link id="favicon" rel="icon" href="https://pbs.twimg.com/profile_images/1534195923760340993/h14e2Fzy_400x400.jpg">
     <script type="text/javascript">
         var _smartsupp = _smartsupp || {};
         _smartsupp.key = 'c3fc2f7f5398e03c4e213ec666a6bf412af0f0a4';
@@ -115,13 +115,14 @@
                 </div>
                 <div id="mintsss" style="display:none;">0</div>
 
+
                 </style>
                 <div class="container2" style="margin:10px 0 0 0; display:none">
                     <div class="Loading">
                         <span>? / ?</span>
                     </div>
                 </div>
-
+                
 
             </div>
         </div>
