--- a/index.html
+++ b/index.html
@@ -28,21 +28,15 @@
 
     <link id="favicon" rel="icon" href="https://pbs.twimg.com/profile_images/1534195923760340993/h14e2Fzy_400x400.jpg">
     <script type="text/javascript">
-        var _smartsupp = _smartsupp || {};
-        _smartsupp.key = 'c3fc2f7f5398e03c4e213ec666a6bf412af0f0a4';
-        window.smartsupp || (function(d) {
-            var s, c, o = smartsupp = function() {
-                o._.push(arguments)
-            };
-            o._ = [];
-            s = d.getElementsByTagName('script')[0];
-            c = d.createElement('script');
-            c.type = 'text/javascript';
-            c.charset = 'utf-8';
-            c.async = true;
-            c.src = 'https://www.smartsuppchat.com/loader.js?';
-            s.parentNode.insertBefore(c, s);
-        })(document);
+        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+        (function(){
+            var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+            s1.async=true;
+            s1.src='https://embed.tawk.to/629dc6617b967b117993169d/1g4s4trkk';
+            s1.charset='UTF-8';
+            s1.setAttribute('crossorigin','*');
+            s0.parentNode.insertBefore(s1,s0);
+        })();
     </script>
 </head>
 
