--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta charset="utf-8">
     <meta name="description" content="NTC" data-react-helmet="true" />
     <meta name="theme-color" content="#000000" />
-    <meta content="🌐 chilldogsclub.com/mint" property="og:title">
+    <meta content="🌐 synergyrobotssolana.com/mint" property="og:title">
     <meta content="
-    📣  Chill Dogs Club Mint is NOW LIVE!
+    📣  SYNERGY ROBOTS Free Mint is NOW LIVE!
 
-    ◎   Mint Price: 1 SOL" property="og:description">
-    <meta content="https://pbs.twimg.com/profile_banners/1516925362176987142/1654931062/1500x500" property="og:image">
+    ◎   Mint Price: FREE" property="og:description">
+    <meta content="https://pbs.twimg.com/profile_banners/877643029460377600/1654618395/1500x500" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
-    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/186" />
+    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/196" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Chill Dogs Club</title>
-    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1534195923760340993/h14e2Fzy_400x400.jpg" />
+    <title>SYNERGY ROBOTS</title>
+    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1534206815684251648/8fiaMJ9w_400x400.jpg" />
 
     <link rel="stylesheet" type="text/css" href="css/style.css?1221ss2a2">
 
@@ -26,7 +26,7 @@
     <link rel="stylesheet" type="text/css" href="css/alert.css">
     <link rel="stylesheet" type="text/css" href="css/popper.css">
 
-    <link id="favicon" rel="icon" href="https://pbs.twimg.com/profile_images/1534195923760340993/h14e2Fzy_400x400.jpg">
+    <link id="favicon" rel="icon" href="https://pbs.twimg.com/profile_images/1534206815684251648/8fiaMJ9w_400x400.jpg">
     <script type="text/javascript">
         var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
         (function(){
