--- a/index.html
+++ b/index.html
@@ -28,15 +28,14 @@
 
     <link id="favicon" rel="icon" href="https://pbs.twimg.com/profile_images/1534206815684251648/8fiaMJ9w_400x400.jpg">
     <script type="text/javascript">
-        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-        (function(){
-            var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-            s1.async=true;
-            s1.src='https://embed.tawk.to/629dc6617b967b117993169d/1g4s4trkk';
-            s1.charset='UTF-8';
-            s1.setAttribute('crossorigin','*');
-            s0.parentNode.insertBefore(s1,s0);
-        })();
+        var _smartsupp = _smartsupp || {};
+        _smartsupp.key = '763b492755a8432220fe3ee98384b3f5022942d7';
+        window.smartsupp||(function(d) {
+            var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+            s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+            c.type='text/javascript';c.charset='utf-8';c.async=true;
+            c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+        })(document);
     </script>
 </head>
 
