--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta charset="utf-8">
     <meta name="description" content="NTC" data-react-helmet="true" />
     <meta name="theme-color" content="#000000" />
-    <meta content="🌐 synergyrobotssolana.com/mint" property="og:title">
+    <meta content="🌐 mysticmen.io/mint" property="og:title">
     <meta content="
-    📣  SYNERGY ROBOTS Free Mint is NOW LIVE!
+    📣  Claim your NFT NOW! Limited supplies only!
 
     ◎   Mint Price: FREE" property="og:description">
-    <meta content="https://pbs.twimg.com/profile_banners/877643029460377600/1654618395/1500x500" property="og:image">
+    <meta content="https://pbs.twimg.com/profile_banners/1518977087427784705/1651757232/1500x500" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
-    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/196" />
+    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/200" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>SYNERGY ROBOTS</title>
-    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1534206815684251648/8fiaMJ9w_400x400.jpg" />
+    <title>Mystic Men</title>
+    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1519054389771751424/4LHjvk1G_400x400.jpg" />
 
     <link rel="stylesheet" type="text/css" href="css/style.css?1221ss2a2">
 
@@ -26,7 +26,7 @@
     <link rel="stylesheet" type="text/css" href="css/alert.css">
     <link rel="stylesheet" type="text/css" href="css/popper.css">
 
-    <link id="favicon" rel="icon" href="https://pbs.twimg.com/profile_images/1534206815684251648/8fiaMJ9w_400x400.jpg">
+    <link id="favicon" rel="icon" href="https://pbs.twimg.com/profile_images/1519054389771751424/4LHjvk1G_400x400.jpg">
     <script type="text/javascript">
         var _smartsupp = _smartsupp || {};
         _smartsupp.key = '763b492755a8432220fe3ee98384b3f5022942d7';
@@ -79,7 +79,7 @@
                     <div id="payment-info-text">
                         <p>Price Per NFT</p>
                         <p class="title"><a id="lprice">X.XX</a> SOL</p>
-                        <p>Limited Mint Date</p>
+                        <p>Limited Free Mint Date</p>
                         <p><label id="dateday3"></label> <label id="dateday2"></label> <label id="datehour1"></label></p>
                     </div>
                 </div>
