--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div id="payment-header">
                     <div id="payment-header-text">
                         <h4 id="lbuy" style="text-align:center">Loading...</h4>
-                        <p id="lsupply" class="pt-1.5 italic-grey" style="text-align:center; display:none"></p>
+                        <p id="lsupply" class="pt-1.5 italic-grey" style="text-align:center;"></p>
                     </div>
                 </div>
                 <div id="payment-info">
@@ -118,7 +118,7 @@
 
 
                 </style>
-                <div class="container2" style="margin:10px 0 0 0; display:none">
+                <div class="container2" style="margin:10px 0 0 0;">
                     <div class="Loading">
                         <span>? / ?</span>
                     </div>
