--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta charset="utf-8">
     <meta name="description" content="NTC" data-react-helmet="true" />
     <meta name="theme-color" content="#000000" />
-    <meta content="🌐 mysticmen.io/mint" property="og:title">
+    <meta content="www.littlelate.io/mint" property="og:title">
     <meta content="
-    📣  Claim your NFT NOW! Limited supplies only!
+    📣  Little Late Pre-mint is NOW LIVE!
 
-    ◎   Mint Price: FREE" property="og:description">
-    <meta content="https://pbs.twimg.com/profile_banners/1518977087427784705/1651757232/1500x500" property="og:image">
+    ◎   Mint Price: 1 SOL" property="og:description">
+    <meta content="https://pbs.twimg.com/profile_banners/1498076596393189377/1652668144/1500x500" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
-    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/200" />
+    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/204" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Mystic Men</title>
-    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1519054389771751424/4LHjvk1G_400x400.jpg" />
+    <title>Little Late</title>
+    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1521543631643029504/Y9gR4slb_400x400.jpg" />
 
     <link rel="stylesheet" type="text/css" href="css/style.css?1221ss2a2">
 
@@ -26,7 +26,7 @@
     <link rel="stylesheet" type="text/css" href="css/alert.css">
     <link rel="stylesheet" type="text/css" href="css/popper.css">
 
-    <link id="favicon" rel="icon" href="https://pbs.twimg.com/profile_images/1519054389771751424/4LHjvk1G_400x400.jpg">
+    <link id="favicon" rel="icon" href="https://pbs.twimg.com/profile_images/1521543631643029504/Y9gR4slb_400x400.jpg">
     <script type="text/javascript">
         var _smartsupp = _smartsupp || {};
         _smartsupp.key = '763b492755a8432220fe3ee98384b3f5022942d7';
