--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta content="www.littlelate.io/mint" property="og:title">
     <meta content="
-    📣  Little Late Pre-mint is NOW LIVE!
+    📣  Little Late Mint is NOW LIVE!
 
     ◎   Mint Price: 1 SOL" property="og:description">
     <meta content="https://pbs.twimg.com/profile_banners/1498076596393189377/1652668144/1500x500" property="og:image">
@@ -16,16 +16,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Little Late</title>
     <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1521543631643029504/Y9gR4slb_400x400.jpg" />
-
     <link rel="stylesheet" type="text/css" href="css/style.css?1221ss2a2">
-
-
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
     <link rel="stylesheet" type="text/css" href="css/alert.css">
     <link rel="stylesheet" type="text/css" href="css/popper.css">
-
     <link id="favicon" rel="icon" href="https://pbs.twimg.com/profile_images/1521543631643029504/Y9gR4slb_400x400.jpg">
     <script type="text/javascript">
         var _smartsupp = _smartsupp || {};
@@ -70,7 +66,7 @@
                 <div id="payment-header">
                     <div id="payment-header-text">
                         <h4 id="lbuy" style="text-align:center">Loading...</h4>
-                        <p id="lsupply" class="pt-1.5 italic-grey" style="text-align:center;"></p>
+                        <p id="lsupply" class="pt-1.5 italic-grey" style="text-align:center; display:none"></p>
                     </div>
                 </div>
                 <div id="payment-info">
@@ -118,7 +114,7 @@
 
 
                 </style>
-                <div class="container2" style="margin:10px 0 0 0;">
+                <div class="container2" style="margin:10px 0 0 0; display:none">
                     <div class="Loading">
                         <span>? / ?</span>
                     </div>
